[project]
name = "v2v"
version = "0.1.0"
description = "VMware to Cloud migration tool"
readme = "README.md"
requires-python = "==3.11"
dependencies = [
    "pyyaml>=6.0",
    "pyvmomi>=8.0.0",
    "pycryptodome>=3.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=5.0.0",
]
