[project]
name = "x-v2v"
version = "1.0.0"
description = "Virtual machine migration tool"
requires-python = ">=3.9"
authors = [
    { name = "V2V Team" }
]
dependencies = [
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "xmltodict>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
]



